--- a/index.html
+++ b/index.html
@@ -5,21 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotlight Cursor Text Screen</title>
+    <!-- External stylesheet link here  -->
     <link rel="stylesheet" href="style.css">
     
 </head>
 <body>
-    <div class="cursor"></div>
-    <div class="shapes">
-      <div class="shape shape-1"></div>
-      <div class="shape shape-2"></div>
-      <div class="shape shape-3"></div>
-    </div>
-    <div class="content">
-      <h1>Hello there!</h1>
-    </div> 
+   <div class="cursor"></div>
+   <div class="shapes">
+    <div class="shape shape-1"></div>
+    <div class="shape shape-2"></div>
+    <div class="shape shape-3"></div>
+   </div>
+   <div class="content">
+    <h1>Hello there!</h1>
+   </div>
 
+    <!-- Gsap library CDN Link here -->
+    <!-- I will provide this link in comment section  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js" integrity="sha512-cOH8ndwGgPo+K7pTvMrqYbmI8u8k6Sho3js0gOqVWTmQMlLIi6TbqGWRTpf1ga8ci9H3iPsvDLr4X7xwhC/+DQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <!-- external javascript  -->
     <script src="script.js"></script>
 </body>
 </html>
